@@ -1,4 +1,6 @@
 # See the description in tests/features/OTCmd2-pub_wait-jOT.txt
+# These are some simple examples of commands that dont need any
+# arguments, and return their results in JSON
 # These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
 # the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
 # the RabbitMQ server configured and running.
