@@ -514,7 +514,7 @@ Features are tagged with these tags, that may have the preconditions:
 
     Given Create the OTCmd2 instance
     Then  The "help" command output contains "Documented commands"
-    Then  The "garbage" command error contains "ERR:"
+    Then  The "garbage" command output contains "ERR:"
     Then  Destroy the OTCmd2 instance
 
 }}}
